--- a/css/style.scss
+++ b/css/style.scss
@@ -11,12 +11,11 @@
 
 a {
     text-decoration: none;
-}
 
-a:hover {
-    color: $textColorAlternative;
+    &:hover {
+        color: $textColorAlternative;
+    }
 }
-
 body {
     @extend %center;
     @extend %flex-column-center;
@@ -104,8 +103,6 @@ body {
             font-weight: 400;
             background-color: #cdcdcc;
             background-image: linear-gradient(180.0deg, #f9f9f9 0%, #f5f5f5 100%);
-            // border: 1px solid #e6e6e6;
-            // border-radius: 3px 0px 0px 3px;
             cursor: pointer;
             list-style: none;
             @extend %flex-row-center;
@@ -146,17 +143,47 @@ body {
     display: flex;
     list-style-type: none;
     justify-content: center;
-}
 
-.menu-link {
-    text-decoration: none;
-    display: block;
-    padding: 20px 25px;
-    color: #222222;
-    font-size: 14px;
-    font-weight: 700;
-    text-transform: uppercase;
-    font-family: "Oswald", sans-serif;
+    &-list {
+        position: relative;
+        &:hover .mega-box {
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            height: 310px;
+            width: 846px;
+        }
+    }
+    &-link {
+        display: block;
+        padding: 20px 25px;
+        color: #222222;
+        font-size: 14px;
+        font-weight: 700;
+        text-transform: uppercase;
+    }
+    &-headding {
+        font-size: 14px;
+        line-height: 32px;
+        font-weight: 400;
+        text-transform: uppercase;
+        letter-spacing: 0.025em;
+        color: #232323;
+        width: 235px;
+        border-bottom: 1px solid #e8e8e8;
+    }
+    &-item {
+        margin-right: 46px;
+    }
+    &-item:last-of-type {
+        margin-right: 0;
+    }
+    &-baner {
+        width: 255px;
+        height: 118px;
+        background-color: #efefef;
+        margin: auto;
+    }
 }
 
 .mega-box {
@@ -169,74 +196,29 @@ body {
     top: 50px;
     left: 0;
     right: auto;
-}
 
-.menu-headding {
-    font-family: Lato;
-    font-size: 14px;
-    line-height: 32px;
-    font-weight: 400;
-    text-transform: uppercase;
-    letter-spacing: 0.025em;
-    color: #232323;
-    width: 235px;
-    border-bottom: 1px solid #e8e8e8;
+    &::before {
+        content: "";
+        display: block;
+        width: 10px;
+        height: 10px;
+        background-color: #ffffff;
+        position: absolute;
+        top: -6px;
+        left: 33px;
+        transform: rotate(45deg);
+        border-top: 1px solid #e8e8e8;
+        border-left: 1px solid #e8e8e8;
+    }
 }
 
 .mega-link {
     display: block;
-    font-family: Lato;
     font-size: 14px;
     line-height: 28px;
     font-weight: 400;
     letter-spacing: 0.025em;
     color: #646464;
-    text-decoration: none;
-}
-
-.mega-link:hover {
-    color: #f16d7f;
-}
-
-.menu-item {
-    margin-right: 46px;
-}
-
-.menu-item:last-of-type {
-    margin-right: 0;
-}
-
-.menu-list {
-    position: relative;
-}
-
-.mega-box::before {
-    content: "";
-    display: block;
-    width: 10px;
-    height: 10px;
-    background-color: #ffffff;
-    position: absolute;
-    top: -6px;
-    left: 33px;
-    transform: rotate(45deg);
-    border-top: 1px solid #e8e8e8;
-    border-left: 1px solid #e8e8e8;
-}
-
-.menu-list:hover .mega-box {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    height: 310px;
-    width: 846px;
-}
-
-.menu-baner {
-    width: 255px;
-    height: 118px;
-    background-color: #efefef;
-    margin: auto;
 }
 
 .last:hover .mega-box {
@@ -271,13 +253,13 @@ body {
     &__slogan {
         font-size: 60px;
         font-weight: 900;
-        line-height: calc(1/1.3);
+        line-height: 0.7;
     }
 
     &__subslogan {
         font-size: 40px;
         font-weight: 900;
-        line-height: 1.3;
+        line-height: 1.2;
 
     }
 
@@ -478,7 +460,7 @@ body {
     }
 }
 
-.breadcrumb {
+.breadcrumbs {
     @extend %flex-row-center;
     width: $maxWidth;
     padding: $gaps $additionalVerge;
@@ -487,31 +469,200 @@ body {
     height: 148px;
     background-color: #f8f3f4;
 
-    &__path {
+    &-location{
+        color: $textColorAlternative;
+        font-size: 24px;
+        font-weight: 900;
+    }
+    &-path {
         @extend %flex-row-center;
-        gap: $gaps;
+        gap: calc($gaps / 2);
         list-style: none;
+        font-size: 14px;
+        font-weight: 300px;
+    }
+
+    &__item:not(:last-of-type)::after{
+        content: '/';
+        padding-left: calc($gaps / 2);
+    }
+
+    &__item:last-child &__link{
+        color: $textColorAlternative;
     }
 }
 
-.product-slide {
-    @extend %flex-row-center;
-    width: $maxWidth;
-    justify-content: space-between;
-    height: 777px;
-    background-color: #f7f7f7;
 
-    &__slider {
-        width: 47px;
-        height: 47px;
-        line-height: 47px;
+.product{
+    position: relative;
+    min-height: 1500px;
+    &-slide {
+        @extend %flex-row-center;
+        width: $maxWidth;
+        justify-content: space-between;
+        height: 777px;
+        background-color: #f7f7f7;  
+        &__slider {
+            width: 47px;
+            height: 47px;
+            line-height: 47px;
+            text-align: center;
+            color: $textColorReserve;
+            background-color: rgba(42, 42, 42, 0.14);
+        }
+    }
+    &-card{
+        position: absolute;
+        top: 700px;
+        left: $additionalVerge;
+        width: $siteWidth;
+        min-height: 730px;
+        background-color: #ffffff;
+        border: 1px solid #eaeaea;
+        box-sizing: border-box;
+        @extend %flex-column-center;
+        gap: $gaps;
+        padding: 72px $additionalVerge 122px;        
+    }
+    &-group{
+        font-size: 14px;
+        line-height: 24px;
+        font-weight: 700;
+        color: $textColorAlternative;
+        padding-bottom: calc($gaps/2);
+        border-bottom: 1px solid #eaeaea;
+        position: relative;
+        &::after{
+            position: absolute;
+            content: '';
+            bottom: -2px;
+            width: 64px;
+            height: 3px;
+            background-color: #ef5b70;
+            left: calc(50% - 32px);
+        }
+    }
+    &-title{
+        font-size: 18px;
+        line-height: 24px;
+        font-weight: 900;
+        text-transform: uppercase;
+        color: #4d4d4d;
+        padding-bottom: $gaps;
+        
+    }
+    &-description{
+        font-size: 14px;
+        line-height: 24px;
+        font-weight: 300;
+        color: #5e5e5e;
+    }
+    &-features{
+        @extend %flex-row-center;
+        gap: calc($gaps * 2);
+
+    }
+    &-material, &-designer{
+        font-size: 14px;
+        line-height: 24px;
+        font-weight: 700;
+        color: #b9b9b9;
+        padding-bottom: $gaps;
+        &span{
+            font-size: 14px;
+            line-height: 24px;
+            font-weight: 700;
+            color: #2f2f2f;
+        }
+    }
+    &-price{
+        display: block;
         text-align: center;
-        color: $textColorReserve;
-        background-color: rgba(42, 42, 42, 0.14);
+        width: calc($siteWidth - $additionalVerge * 2);
+        font-size: 24px;
+        line-height: 24px;
+        font-weight: 700;
+        color: #ef5b70;
+        
+        padding-bottom: calc($gaps * 2);
+        border-bottom: 1px solid #eaeaea;
+    }
+    &-metrics{
+        @extend %flex-column-center;
+        width: 537px;
+        gap: calc($gaps * 2);
+
+        &__box{
+            width: 537px;
+            @extend %flex-row-center;
+            gap: 0 auto;
+            justify-content: space-between;
+        }
+
+        &__block{
+            width: 144px;
+            display: flex;
+            @extend %flex-column-center;
+            align-items: start;
+        }
+
+        &__title{
+            display: block;
+            width: 144px;
+            font-size: 14px;
+            line-height: 24px;
+            font-weight: 700;
+            color: #2f2f2f;
+            padding-bottom: calc($gaps / 2);
+        }
+        &__select{
+            width: 100%;
+            height: 35px;
+            background-color: #ffffff;
+            border: 1px solid #eaeaea;
+            &:focus{
+                outline: none;
+            }
+        }
+
+        &__button{
+            @extend %flex-row-center;
+            justify-content: center;
+            gap: calc($gaps / 2);
+            width: 537px;
+            height: 55px;
+            background-color: #ffffff;
+            border: 1px solid #ef5b70;
+            &-text{
+                font-size: 16px;
+                line-height: 1.2;
+                font-weight: 700;
+                color: #ef5b70;
+            }
+            &:hover{
+                background-color: $textColorAlternative;
+            }
+            &:hover &-text{
+                color: $textColorReserve;
+            }
+        }
+
     }
 }
+
 
 .promo {
+    @extend %flex-column-center;
+    gap: calc($gaps * 3.5);
+    padding: calc($gaps * 3.5) 0;
+
+    &__title{
+        font-size: 24px;
+        line-height: 20px;
+        font-weight: 900;
+        text-transform: uppercase;
+        color: #4d4d4d;
+    }
     &__products-box {
         width: $siteWidth;
         display: grid;
@@ -527,9 +678,29 @@ body {
         justify-content: center;
     }
 
-    &__product-photo {
+    &__product{
+        &-photo {
         max-height: 280px;
+        }
+        &-name{
+            font-size: 14px;
+            line-height: 1.2;
+            font-weight: 400;
+            text-transform: uppercase;
+            color: #6f6e6e;
+            padding: calc($gaps / 2);
+        }
+        &-price{
+            font-size: 16px;
+            line-height: 1.2;
+            font-weight: 700;
+            text-transform: uppercase;
+            color: $textColorAlternative;
+            padding: 0 calc($gaps / 2);
+        }
     }
+    
+
 }
 
 .subscriber {
