checkout page completed

--- a/css/_mixins.scss
+++ b/css/_mixins.scss
@@ -2,4 +2,6 @@
     width: $mWidth;
     min-height: $mHeight;
     background-image: url($mBackgroundPicture);
+    // background-size: cover;
+    // background-position: bottom;
 }
