--- a/css/style.scss
+++ b/css/style.scss
@@ -474,6 +474,7 @@ body {
         margin-bottom: calc($gaps * 3);
     }
 }
+
 .add {
     display: flex;
     text-decoration: none;
@@ -1011,4 +1012,118 @@ body {
             }
         }
     }
+}
+
+.checkout{
+    width: 100%;
+    padding: $gaps 0;
+
+    &__option{
+        border-bottom: 1px solid #e8e8e8;;
+
+
+        &[open] &-name{
+            color: $textColorAlternative
+        }
+
+        &-name{
+            font-size: 16px;
+            line-height: 1.2;
+            font-weight: 700;
+            text-transform: uppercase;
+            color: #222222;
+            list-style: none;
+            padding: $gaps 0;
+            cursor: pointer;
+        }
+        &-description{
+            padding-bottom: $gaps;
+        }
+    }
+    &__forms-box{
+        @extend %flex-row-center;
+        justify-content: space-between;
+        padding-left: $gaps*2;
+    }
+    &__registration, &__login{
+        width: 48%;
+        min-height: 290px;
+        padding: $gaps 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    &__form{
+
+        &-title{
+            font-size: 13px;
+            line-height: 1.2;
+            font-weight: 400;
+            text-transform: uppercase;
+            color: #222222;
+
+            &-required::after{
+                content: '*';
+                font-size: 17px;
+                line-height: 20px;
+                font-weight: 400;
+                color: #ff0d0d;
+            }
+
+            &_red{
+                font-size: 13px;
+                line-height: 20px;
+                font-weight: 400;
+                color: #ff0d0d;
+            }
+        }
+
+        &-description{
+            font-size: 13px;
+            line-height: 20px;
+            font-weight: 400;
+            color: #b3b2b2;
+            &-features::before{
+                content: '>>';
+                padding-right: 8px;
+            }
+        }
+
+        &-radio-label{
+            margin-left: 2%;
+            font-size: 12px;
+            line-height: 1.2;
+            font-weight: 400;
+            text-transform: uppercase;
+            color: #222222;
+        }
+
+        &-input{
+            width: 390px;
+            height: 45px;
+            background-color: #ffffff;
+            border: 1px solid #eaeaea;
+            padding: 0 3%;
+            &:focus{
+                outline-style: none;
+            }
+        }
+    }
+    &__button{
+        width: 180px;
+        height: 50px;
+        background-color: $textColorAlternative;
+        color: $textColorReserve;
+
+        border: 1px solid #eaeaea;
+        cursor: pointer;
+        margin-right: $gaps;
+
+        &:hover{
+            background-color: #ffffff;
+            color: $textColorAlternative;
+        }
+    }
+
 }
