--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
   padding-right: calc(50% - 570px);
 }
 
-.footer__bottom__socials__link, .footer__bottom__socials, .footer__bottom, .footer__menu__sections, .footer__menu__logo_container, .subscriber__form__email_fields, .subscriber__teaser, .subscriber, .product-metrics__button, .product-metrics__box, .product-features, .product-slide, .breadcrumbs-path, .breadcrumbs, .feature__boxes_cat, .feature, .products__catalogue, .header__chart-content__product-button, .header__chart-content__product-total, .header__chart-content__product, .header__account-button, .header__main_menu, .header__drop_menu__summary, .header__search__container, .header__search, .header__top__right_block, .header__top__left_block, .header__top {
+.checkout__forms-box, .footer__bottom__socials__link, .footer__bottom__socials, .footer__bottom, .footer__menu__sections, .footer__menu__logo_container, .subscriber__form__email_fields, .subscriber__teaser, .subscriber, .product-metrics__button, .product-metrics__box, .product-features, .product-slide, .breadcrumbs-path, .breadcrumbs, .feature__boxes_cat, .feature, .products__catalogue, .header__chart-content__product-button, .header__chart-content__product-total, .header__chart-content__product, .header__account-button, .header__main_menu, .header__drop_menu__summary, .header__search__container, .header__search, .header__top__right_block, .header__top__left_block, .header__top {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -853,4 +853,101 @@ a:hover {
 }
 .footer__bottom__socials__link:hover {
   background-color: #f16d7f;
+}
+
+.checkout {
+  width: 100%;
+  padding: 20px 0;
+}
+.checkout__option {
+  border-bottom: 1px solid #e8e8e8;
+}
+.checkout__option[open] .checkout__option-name {
+  color: #f16d7f;
+}
+.checkout__option-name {
+  font-size: 16px;
+  line-height: 1.2;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #222222;
+  list-style: none;
+  padding: 20px 0;
+  cursor: pointer;
+}
+.checkout__option-description {
+  padding-bottom: 20px;
+}
+.checkout__forms-box {
+  justify-content: space-between;
+  padding-left: 40px;
+}
+.checkout__registration, .checkout__login {
+  width: 48%;
+  min-height: 290px;
+  padding: 20px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.checkout__form-title {
+  font-size: 13px;
+  line-height: 1.2;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #222222;
+}
+.checkout__form-title-required::after {
+  content: "*";
+  font-size: 17px;
+  line-height: 20px;
+  font-weight: 400;
+  color: #ff0d0d;
+}
+.checkout__form-title_red {
+  font-size: 13px;
+  line-height: 20px;
+  font-weight: 400;
+  color: #ff0d0d;
+}
+.checkout__form-description {
+  font-size: 13px;
+  line-height: 20px;
+  font-weight: 400;
+  color: #b3b2b2;
+}
+.checkout__form-description-features::before {
+  content: ">>";
+  padding-right: 8px;
+}
+.checkout__form-radio-label {
+  margin-left: 2%;
+  font-size: 12px;
+  line-height: 1.2;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #222222;
+}
+.checkout__form-input {
+  width: 390px;
+  height: 45px;
+  background-color: #ffffff;
+  border: 1px solid #eaeaea;
+  padding: 0 3%;
+}
+.checkout__form-input:focus {
+  outline-style: none;
+}
+.checkout__button {
+  width: 180px;
+  height: 50px;
+  background-color: #f16d7f;
+  color: #ffffff;
+  border: 1px solid #eaeaea;
+  cursor: pointer;
+  margin-right: 20px;
+}
+.checkout__button:hover {
+  background-color: #ffffff;
+  color: #f16d7f;
 }/*# sourceMappingURL=style.css.map */
